@@ -126,7 +126,7 @@
         <p>
             <strong>Enhancements</strong>
             <ul>
-                <li>Encounter will not reset on a countdown.</li>
+                <li>Encounter will now reset on a countdown.</li>
             </ul>
         </p>
         <p>
